Style and organize everything in the calculator

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <title>Calculator</title>
     </head>
     <body>
-        <div id="Calculator">
+        <div id="calculator">
             <div id="screen"></div>
             <div id="clearBtns">
-                <button>clear</button>
-                <button>delete</button>
+                <button>Clear</button>
+                <button>Del.</button>
             </div>
             <div id="keyContainer">
                 <button>7</button>
