Add screen content and font to the screen content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <div id="calculator">
-            <div id="screen"></div>
+            <div id="screen">
+                <h3 id="prev"></h3>
+                <h3 id="next">0</h3>
+            </div>
             <div id="clearBtns">
                 <button>Clear</button>
                 <button>Del.</button>
