Am not pretty good with commits, I just did it all

--- a/index.html
+++ b/index.html
@@ -8,31 +8,32 @@
     <body>
         <div id="calculator">
             <div id="screen">
-                <h3 id="prev"></h3>
-                <h3 id="next">0</h3>
+                <h3 id="line1"></h3>
+                <h3 id="line2">0</h3>
             </div>
             <div id="clearBtns">
-                <button>Clear</button>
-                <button>Del.</button>
+                <button id="clear">Clear</button>
+                <button id="delete">Del.</button>
             </div>
             <div id="keyContainer">
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>/</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>x</button>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>-</button>
-                <button>.</button>
-                <button>0</button>
-                <button>=</button>
-                <button>+</button>
+                <button class="digit">7</button>
+                <button class="digit">8</button>
+                <button class="digit">9</button>
+                <button class="operator">/</button>
+                <button class="digit">4</button>
+                <button class="digit">5</button>
+                <button class="digit">6</button>
+                <button class="operator">x</button>
+                <button class="digit">1</button>
+                <button class="digit">2</button>
+                <button class="digit">3</button>
+                <button class="operator">-</button>
+                <button class="decimal">.</button>
+                <button class="digit">0</button>
+                <button class="equal">=</button>
+                <button class="operator">+</button>
             </div>
         </div>
+        <script src="./script.js"></script>
     </body>
 </html>
